--- a/infra/budgets/budgets-stack.yml
+++ b/infra/budgets/budgets-stack.yml
@@ -8,6 +8,28 @@ Parameters:
     ConstraintDescription: Must be a valid email address.
     Description: Email address to notify budgets
 Resources:
+  # An SNS topic on Budget Alarms
+  BudgetAlarmsSnsTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      TopicName: soar-budget-alarm
+
+  # Allows aws budgets to publish to the SNS Topic
+  BudgetAlarmsTopicPolicy:
+    Type: AWS::SNS::TopicPolicy
+    Properties:
+      Topics:
+      - !Ref BudgetAlarmsSnsTopic
+      PolicyDocument:
+        Version: 2008-10-17
+        Statement:
+        - Sid: "Allow AWS Budgets to send to this topic"
+          Effect: Allow
+          Principal:
+            Service: budgets.amazonaws.com
+          Action: SNS:Publish
+          Resource: !Ref BudgetAlarmsSnsTopic
+
   BudgetExcCredits:
     Type: "AWS::Budgets::Budget"
     Properties:
@@ -31,7 +53,7 @@ Resources:
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
         - Notification:
             NotificationType: FORECASTED
             ComparisonOperator: GREATER_THAN
@@ -39,7 +61,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 20% actual and forecasted
@@ -50,7 +72,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -60,7 +82,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 50% actual and forecasted
@@ -71,7 +93,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -81,7 +103,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 80% actual and forecasted
@@ -92,7 +114,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -102,7 +124,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 100% actual and forecasted
@@ -113,7 +135,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -123,7 +145,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
 
@@ -148,7 +170,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -158,7 +180,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 20% actual and forecasted
@@ -169,7 +191,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -179,7 +201,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 50% actual and forecasted
@@ -190,7 +212,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -200,7 +222,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 80% actual and forecasted
@@ -211,7 +233,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -221,7 +243,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         # 100% actual and forecasted
@@ -232,7 +254,7 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
         - Notification:
@@ -242,6 +264,14 @@ Resources:
             ThresholdType: PERCENTAGE
           Subscribers:
             - SubscriptionType: SNS
-              Address: !ImportValue budget-alarms:BudgetAlarmsSnsTopic
+              Address: !Ref BudgetAlarmsSnsTopic
             - SubscriptionType: EMAIL
               Address: !Ref NotificationEmail1
+
+Outputs:
+  BudgetAlarmsSnsTopic:
+    Description: "The SNS topic for the budget alarms"
+    Value: !Ref BudgetAlarmsSnsTopic
+    Export:
+      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'BudgetAlarmsSnsTopic' ] ]
+
