--- a/infra/soar/cicd.yml
+++ b/infra/soar/cicd.yml
@@ -323,7 +323,7 @@ Resources:
           - Name: BuildArtifact
           Configuration:
             ActionMode: REPLACE_ON_FAILURE
-            StackName: SoarHelloWorld
+            StackName: BudgetAlarms
             TemplatePath: "BuildArtifact::services/budget-alarms/transformed.yaml"
             RoleArn: !GetAtt CodePipelineServiceRole.Arn
             Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
